Addressed all //TODO comments and fixed javadocs!